--- a/Blog.html
+++ b/Blog.html
@@ -1,11 +1,15 @@
 
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" href="BlogStyle.css">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title> Jonathan's Blogasaurus - blog</title>
+    <h1> Blog </h1>
   </head>
   <body>
-
+    <p>
+      blog text
+    </p>
   </body>
 </html>
