--- a/Profile.html
+++ b/Profile.html
@@ -1,10 +1,49 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
+<link rel="stylesheet" href="BlogStyle.css">
+<!DOCTYPE html>
+<
+<html>
+<head>
 
-  </body>
+<title>Jonathan Amar's Profile</title>
+
+<h1>Jonathan Amar</h1>
+</head>
+<body>
+<img src="JonathanAmar.jpg" width="80" height="80"
+alt="Photo of Jonathan Amar">
+
+<h2>Bio</h2>
+<p>I live in Calabasas and work at Google. I like teaching, hanging out in
+coffee shops, and playing Saxophone.</p>
+
+<h2>Hometown</h2>
+Calabasas, California
+
+<h2>University</h2>
+UC Santa Cruz
+
+<h2>Other Profiles</h2>
+<ul>
+  <li><a href="http://plus.google.com"> Google
+  </a>
+</li>
+  <li><a href="http://www.facebook.com"><pclass="link">Facebook</p>
+  </a>
+</li>
+</ul>
+
+<h2>My Favorite Movies</h2>
+<ol>
+  <li>Sing Street</li>
+  <li>Ferris Bueller's Day Off</li>
+  <li>Kubo and The Two Strings</li>
+</ol>
+
+<a class= "imglink" href="http://google.com">
+  <img src= dog.jpg width="80"
+   height="80" alt="Google clickable img"/>
+ </a>
+</body>
 </html>
